--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -7,3 +7,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
 
 @import './Button.css';
+@import './CreditCard.css';
+
+/* .card{
+  @apply bg-zinc-900
+} */
