--- a/src/styles/CreditCard.css
+++ b/src/styles/CreditCard.css
@@ -7,7 +7,7 @@
   box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 6px;
   width: 80%;
-  @apply p-2;
+  @apply p-2 sm:w-64 md:w-64 lg:w-72 xl:w-80 2xl:w-96;
 }
 
 .top-card{
@@ -43,9 +43,6 @@
   max-width: 68%;
 }
 
-/* .card-data div{
-  max-width: 20%;
-} */
 .card-data-title{
   @apply text-xs
 }
