Feat: Add input and keyboard

--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -9,3 +9,5 @@
 @import './Button.css';
 @import './CreditCard.css';
 @import './InformativeScreens.css';
+@import './PasswdButton.css';
+@import './Login.css';
