--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -11,3 +11,5 @@
 @import './InformativeScreens.css';
 @import './PasswdButton.css';
 @import './Login.css';
+@import './Start.css';
+@import './Logo.css';
