--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -40,4 +40,119 @@
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
   }
-  
+
+
+/* codigo andrea */
+.login-form{
+  /* @apply m-auto */
+}
+
+.login-title{
+  @apply text-aqua text-center text-xl sm:text-2xl md:text-3xl lg:text-4xl xl:text-5xl 2xl:text-7xl font-semibold my-11; 
+}
+
+.container-login-form{
+  width: 50%;
+  margin: auto;
+}
+
+.label-login-form{
+  display: block;
+  text: #797777;
+  @apply mt-8 mb-1 font-extralight	
+}
+
+.input-login-form{
+  display: block;
+  width: 100%;
+  @apply bg-gray p-1 rounded-lg	
+}
+
+.input-login-form::placeholder{
+  @apply text-lightGreen
+}
+
+.error-login-form{
+  @apply text-red-500;
+}
+
+.forget-pass{
+  @apply text-orange font-semibold text-base sm:text-xl;
+  position: fixed;
+  bottom: 10%;
+  right: 25%;
+}
+
+@media (min-width: 370px) {
+  .forget-pass {
+    right: 30%;
+  }
+}
+@media (min-width: 405px) {
+  .forget-pass {
+    right: 30%;
+  }
+  .container-login-form{
+    width: 41%;
+  }
+}
+
+@media (min-width: 450px) {
+  .forget-pass {
+    right: 32%;
+  }
+  .container-login-form{
+    width: 37%;
+  }
+}
+
+@media (min-width: 501px) {
+  .forget-pass {
+    right: 32%;
+  }
+  .container-login-form{
+    width: 50%;
+  }
+}
+
+@media (min-width: 501px) {
+  .forget-pass {
+    right: 32%;
+  }
+  .container-login-form{
+    width: 35%;
+  }
+}
+
+@media (min-width: 555px) {
+  .forget-pass {
+    right: 37%;
+  }
+  .container-login-form{
+    width: 30%;
+  }
+}
+
+@media (min-width: 644px) {
+  .forget-pass {
+    right: 34%;
+  }
+}
+
+@media (min-width: 800px) {
+  .forget-pass {
+    right: 39%;
+  }
+}
+
+@media (min-width: 1000px) {
+  .forget-pass {
+    right: 44%;
+  }
+}
+
+@media (min-width: 1438px) {
+  .forget-pass {
+    right: 42%;
+  }
+}
