Commenting body background

--- a/src/styles/Error404.css
+++ b/src/styles/Error404.css
@@ -16,21 +16,21 @@
 @property --swing-x {
   initial-value: 0;
   inherits: false;
-  syntax: '<integer>';
+  syntax: "<integer>";
 }
 @property --swing-y {
   initial-value: 0;
   inherits: false;
-  syntax: '<integer>';
+  syntax: "<integer>";
 }
 body {
   min-height: 100vh;
   display: flex;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background: var(--bg);
+  /*background: var(--bg);*/
   color: var(--color);
   perspective: 1200px;
 }
@@ -49,28 +49,33 @@ p {
 }
 h1 {
   -webkit-animation: swing var(--speed) infinite alternate ease-in-out;
-          animation: swing var(--speed) infinite alternate ease-in-out;
+  animation: swing var(--speed) infinite alternate ease-in-out;
   font-size: clamp(5rem, 40vmin, 20rem);
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   margin: 0;
   margin-bottom: 1rem;
   letter-spacing: 1rem;
   transform: translate3d(0, 0, 0vmin);
   --x: calc(50% + (var(--swing-x) * 0.5) * 1%);
-  background: radial-gradient(var(--lit-header), var(--header) 45%) var(--x) 100%/200% 200%;
+  background: radial-gradient(var(--lit-header), var(--header) 45%) var(--x)
+    100%/200% 200%;
   -webkit-background-clip: text;
   color: transparent;
 }
 h1:after {
   -webkit-animation: swing var(--speed) infinite alternate ease-in-out;
-          animation: swing var(--speed) infinite alternate ease-in-out;
+  animation: swing var(--speed) infinite alternate ease-in-out;
   content: "404";
   position: absolute;
   top: 0;
   left: 0;
   color: var(--shadow);
   filter: blur(1.5vmin);
-  transform: scale(1.05) translate3d(0, 12%, -10vmin) translate(calc((var(--swing-x, 0) * 0.05) * 1%), calc((var(--swing-y) * 0.05) * 1%));
+  transform: scale(1.05) translate3d(0, 12%, -10vmin)
+    translate(
+      calc((var(--swing-x, 0) * 0.05) * 1%),
+      calc((var(--swing-y) * 0.05) * 1%)
+    );
 }
 .cloak {
   animation: swing var(--speed) infinite alternate-reverse ease-in-out;
