--- a/src/styles/Error404.css
+++ b/src/styles/Error404.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&family=Roboto:wght@100;300&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&family=Roboto:wght@100;300&display=swap");
 :root {
   --button: #b3b3b3;
   --button-color: #0a0a0a;
@@ -129,4 +129,4 @@ h1:after {
     --swing-y: -100;
     --swing-x: 100;
   }
-}
+} */
