--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -1,49 +1,3 @@
-.container-keyboard { 
-    /* position: center; */
-    /* justify-content: center; */
-  }
-  
-  /* .buttons-keyboard {
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-  } */
-
-  /* .login-top{
-    margin: 0;
-    position: absolute;
-    top: 25%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-  } */
-
-  /* .input-password{
-    @apply md:h-full rounded md:rounded-lg bg-gray ;
-    font-family: Montserrat;
-    font-size: medium;
-  } */
-
-  /* .login-pin{
-    font-family: Montserrat;
-    font-size: large;
-    color: gray;
-  } */
-
-  /* .btn-toggle-password{
-    margin: 0;
-    position: absolute;
-    top: 70%;
-    left: 92%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-  } */
-
-
-/* codigo andrea */
 
 .login-title{
   @apply text-aqua text-center text-xl sm:text-2xl md:text-3xl lg:text-4xl xl:text-5xl 2xl:text-7xl font-semibold my-11; 
@@ -61,13 +15,17 @@
 }
 
 .input-login-form{
-  display: block;
   width: 100%;
-  @apply bg-gray p-1 rounded-lg	
+  @apply bg-gray p-1 rounded-lg	flex;
 }
 
 .input-login-form::placeholder{
   @apply text-lightGreen
+}
+
+.input-pass {
+  width: 95%;
+  @apply bg-transparent	border-transparent;
 }
 
 .error-login-form{
@@ -77,18 +35,19 @@
 .forget-pass{
   @apply text-orange font-semibold text-base sm:text-xl;
   position: fixed;
-  bottom: 10%;
+  bottom: 1%;
   right: 25%;
 }
 
-@media (min-width: 370px) {
+@media (min-width: 320px) {
   .forget-pass {
     right: 30%;
+    bottom: 3%;
   }
 }
 @media (min-width: 405px) {
   .forget-pass {
-    right: 30%;
+    right: 32%;
   }
   .container-login-form{
     width: 41%;
@@ -97,7 +56,7 @@
 
 @media (min-width: 450px) {
   .forget-pass {
-    right: 32%;
+    right: 34%;
   }
   .container-login-form{
     width: 37%;
@@ -106,16 +65,7 @@
 
 @media (min-width: 501px) {
   .forget-pass {
-    right: 32%;
-  }
-  .container-login-form{
-    width: 50%;
-  }
-}
-
-@media (min-width: 501px) {
-  .forget-pass {
-    right: 32%;
+    right: 36%;
   }
   .container-login-form{
     width: 35%;
@@ -124,7 +74,7 @@
 
 @media (min-width: 555px) {
   .forget-pass {
-    right: 37%;
+    right: 38%;
   }
   .container-login-form{
     width: 30%;
@@ -133,24 +83,44 @@
 
 @media (min-width: 644px) {
   .forget-pass {
-    right: 34%;
+    right: 36%;
   }
 }
 
-@media (min-width: 800px) {
+@media (min-width: 690px) {
   .forget-pass {
-    right: 39%;
+    right: 38%;
+    bottom: 5%;
+  }
+}
+
+@media (min-width: 770px) {
+  .forget-pass {
+    right: 40%;
+    bottom: 5%;
+  }
+}
+
+@media (min-width: 820px) {
+  .forget-pass {
+    right: 41%;
   }
 }
 
 @media (min-width: 1000px) {
   .forget-pass {
-    right: 44%;
+    right: 42%;
+  }
+}
+
+@media (min-width: 1120px) {
+  .forget-pass {
+    right: 43%;
   }
 }
 
 @media (min-width: 1438px) {
   .forget-pass {
-    right: 42%;
+    right: 45%;
   }
 }
