--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -14,3 +14,5 @@
 @import './Spinner.css';
 @import './Start.css';
 @import './Logo.css';
+@import './Error404.css';
+@import './ConfirmTransfer.css';
